# pywebflx

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  teste.py  teste_scraping.py
.github/workflows/: ci.yml  publish.yml
api/browser/: index.html
api/config/: index.html
api/exceptions/: index.html
api/extraction/: index.html
api/inspect/: index.html
api/interaction/: index.html
api/javascript/: index.html
api/navigation/: index.html
api/synchronization/: index.html
backlog/: index.html
docs/: backlog.md  index.md  index.pt.md  installation.md  installation.pt.md
docs/api/: browser.md  browser.pt.md  config.md  config.pt.md  exceptions.md  exceptions.pt.md  extraction.md  extraction.pt.md  inspect.md  inspect.pt.md  interaction.md  interaction.pt.md  javascript.md  javascript.pt.md  navigation.md  navigation.pt.md  synchronization.md  synchronization.pt.md
docs/examples/: rpa.md  rpa.pt.md  scraping.md  scraping.pt.md
docs/superpowers/plans/: 2026-03-28-pywebflx-implementation.md
docs/superpowers/specs/: 2026-03-28-pywebflx-design.md
examples/rpa/: index.html
examples/scraping/: index.html
extension/: background.js  manifest.json
installation/: index.html
pt/: index.html
pt/api/browser/: index.html
pt/api/config/: index.html
pt/api/exceptions/: index.html
pt/api/extraction/: index.html
pt/api/inspect/: index.html
pt/api/interaction/: index.html
pt/api/javascript/: index.html
pt/api/navigation/: index.html
pt/api/synchronization/: index.html
pt/backlog/: index.html
pt/examples/rpa/: index.html
pt/examples/scraping/: index.html
pt/installation/: index.html
search/: search_index.json
src/pywebflx/: __init__.py  __main__.py  browser.py  cli.py  config.py  connection.py  exceptions.py  logging.py  protocol.py  selectors.py  tab_manager.py
src/pywebflx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pywebflx/actions/: __init__.py
src/pywebflx/extension/: background.js
superpowers/plans/2026-03-28-pywebflx-implementation/: index.html
superpowers/specs/2026-03-28-pywebflx-design/: index.html
tests/: conftest.py  test_browser.py  test_cli.py  test_config.py  test_connection.py  test_exceptions.py  test_logging.py  test_protocol.py  test_regression_e2e.py  test_selectors.py  test_tab_manager.py  teste.py  teste_scraping.py  teste_toscrape.py
(+2 files in other folders)
